// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Meta /> > should match snapshot with label, icon for Primary variant 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <span
    class="reset_inlineText__1oah0223 sprinkles_alignItems_center_mobile__onxwjuh8 sprinkles_display_flex_mobile__onxwju84 sprinkles_flexDirection_row_mobile__onxwjuk0 sprinkles_flexWrap_nowrap_mobile__onxwjuko sprinkles_gap_2_mobile__onxwjudw sprinkles_minWidth_fit-content_mobile__onxwjudo sprinkles_position_relative_mobile__onxwju9s"
  >
    <div
      class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuh8 sprinkles_display_flex_mobile__onxwju84 sprinkles_gap_2_mobile__onxwjudw sprinkles_flexWrap_nowrap_mobile__onxwjuko"
    >
      <span
        class="reset_inlineText__1oah0223 sprinkles_display_block_mobile__onxwju7w Icon_makeResponsiveStyle_key_bp__1gy3ire0 Meta_variant_primary__5jk44p0"
      >
        <svg
          aria-hidden="true"
          class="sprinkles_display_block_mobile__onxwju7w sprinkles_width_full_mobile__onxwjud4 sprinkles_height_full_mobile__onxwjubk"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
          />
        </svg>
      </span>
    </div>
    <div
      class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuh8 sprinkles_display_flex_mobile__onxwju84 sprinkles_gap_2_mobile__onxwjudw sprinkles_flexWrap_nowrap_mobile__onxwjuko"
    >
      <span
        class="reset_inlineText__1oah0223 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_4__1xnpmd74"
      >
        Hello World!
      </span>
    </div>
  </span>
</div>
`;

exports[`<Meta /> > should match snapshot with label, icon for Secondary variant 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <span
    class="reset_inlineText__1oah0223 sprinkles_alignItems_center_mobile__onxwjuh8 sprinkles_display_flex_mobile__onxwju84 sprinkles_flexDirection_row_mobile__onxwjuk0 sprinkles_flexWrap_nowrap_mobile__onxwjuko sprinkles_gap_2_mobile__onxwjudw sprinkles_minWidth_fit-content_mobile__onxwjudo sprinkles_position_relative_mobile__onxwju9s"
  >
    <div
      class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuh8 sprinkles_display_flex_mobile__onxwju84 sprinkles_gap_2_mobile__onxwjudw sprinkles_flexWrap_nowrap_mobile__onxwjuko"
    >
      <span
        class="reset_inlineText__1oah0223 sprinkles_display_block_mobile__onxwju7w Icon_makeResponsiveStyle_key_bp__1gy3ire0 Meta_variant_secondary__5jk44p1"
      >
        <svg
          aria-hidden="true"
          class="sprinkles_display_block_mobile__onxwju7w sprinkles_width_full_mobile__onxwjud4 sprinkles_height_full_mobile__onxwjubk"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
          />
        </svg>
      </span>
    </div>
    <div
      class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuh8 sprinkles_display_flex_mobile__onxwju84 sprinkles_gap_2_mobile__onxwjudw sprinkles_flexWrap_nowrap_mobile__onxwjuko"
    >
      <span
        class="reset_inlineText__1oah0223 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_4__1xnpmd74"
      >
        Hello World!
      </span>
    </div>
  </span>
</div>
`;
